runtime/gen/basis-ffi.h

MLTON_CODEGEN_STATIC_INLINE Word64_t Word64_lshift(Word64_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE void Word64_move(Ref(Word64_t),Ref(Word64_t));
MLTON_CODEGEN_STATIC_INLINE Word64_t Word64_neg(Word64_t);
MLTON_CODEGEN_STATIC_INLINE Word64_t Word64_notb(Word64_t);
MLTON_CODEGEN_STATIC_INLINE Word64_t Word64_orb(Word64_t,Word64_t);
MLTON_CODEGEN_STATIC_INLINE Word64_t Word64_rol(Word64_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word64_t Word64_ror(Word64_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE void Word64_store(Ref(Word64_t),Word64_t);
MLTON_CODEGEN_STATIC_INLINE Word64_t Word64_sub(Word64_t,Word64_t);
MLTON_CODEGEN_STATIC_INLINE Word64_t Word64_xorb(Word64_t,Word64_t);
MLTON_CODEGEN_STATIC_INLINE Word8_t Word8_add(Word8_t,Word8_t);
MLTON_CODEGEN_STATIC_INLINE Word8_t Word8_andb(Word8_t,Word8_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t Word8_equal(Word8_t,Word8_t);
MLTON_CODEGEN_STATIC_INLINE Word8_t Word8_lshift(Word8_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word8_t Word8_neg(Word8_t);
MLTON_CODEGEN_STATIC_INLINE Word8_t Word8_notb(Word8_t);
MLTON_CODEGEN_STATIC_INLINE Word8_t Word8_orb(Word8_t,Word8_t);
MLTON_CODEGEN_STATIC_INLINE Word8_t Word8_rol(Word8_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word8_t Word8_ror(Word8_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word8_t Word8_sub(Word8_t,Word8_t);
MLTON_CODEGEN_STATIC_INLINE Word8_t Word8_xorb(Word8_t,Word8_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS16_addCheckOverflows(Int16_t,Int16_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS16_ge(Int16_t,Int16_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS16_gt(Int16_t,Int16_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS16_le(Int16_t,Int16_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS16_lt(Int16_t,Int16_t);
MLTON_CODEGEN_STATIC_INLINE Int16_t WordS16_mul(Int16_t,Int16_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS16_mulCheckOverflows(Int16_t,Int16_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS16_negCheckOverflows(Int16_t);
MLTON_CODEGEN_STATIC_INLINE Int16_t WordS16_quot(Int16_t,Int16_t);
MLTON_CODEGEN_STATIC_INLINE Int16_t WordS16_rem(Int16_t,Int16_t);
MLTON_CODEGEN_STATIC_INLINE Int16_t WordS16_rshift(Int16_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS16_subCheckOverflows(Int16_t,Int16_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS32_addCheckOverflows(Int32_t,Int32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS32_ge(Int32_t,Int32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS32_gt(Int32_t,Int32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS32_le(Int32_t,Int32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS32_lt(Int32_t,Int32_t);
MLTON_CODEGEN_STATIC_INLINE Int32_t WordS32_mul(Int32_t,Int32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS32_mulCheckOverflows(Int32_t,Int32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS32_negCheckOverflows(Int32_t);
MLTON_CODEGEN_STATIC_INLINE Int32_t WordS32_quot(Int32_t,Int32_t);
MLTON_CODEGEN_STATIC_INLINE Int32_t WordS32_rem(Int32_t,Int32_t);
MLTON_CODEGEN_STATIC_INLINE Int32_t WordS32_rshift(Int32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS32_subCheckOverflows(Int32_t,Int32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS64_addCheckOverflows(Int64_t,Int64_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS64_ge(Int64_t,Int64_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS64_gt(Int64_t,Int64_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS64_le(Int64_t,Int64_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS64_lt(Int64_t,Int64_t);
MLTON_CODEGEN_STATIC_INLINE Int64_t WordS64_mul(Int64_t,Int64_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS64_mulCheckOverflows(Int64_t,Int64_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS64_negCheckOverflows(Int64_t);
MLTON_CODEGEN_STATIC_INLINE Int64_t WordS64_quot(Int64_t,Int64_t);
MLTON_CODEGEN_STATIC_INLINE Int64_t WordS64_rem(Int64_t,Int64_t);
MLTON_CODEGEN_STATIC_INLINE Int64_t WordS64_rshift(Int64_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS64_subCheckOverflows(Int64_t,Int64_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS8_addCheckOverflows(Int8_t,Int8_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS8_ge(Int8_t,Int8_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS8_gt(Int8_t,Int8_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS8_le(Int8_t,Int8_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS8_lt(Int8_t,Int8_t);
MLTON_CODEGEN_STATIC_INLINE Int8_t WordS8_mul(Int8_t,Int8_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS8_mulCheckOverflows(Int8_t,Int8_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS8_negCheckOverflows(Int8_t);
MLTON_CODEGEN_STATIC_INLINE Int8_t WordS8_quot(Int8_t,Int8_t);
MLTON_CODEGEN_STATIC_INLINE Int8_t WordS8_rem(Int8_t,Int8_t);
MLTON_CODEGEN_STATIC_INLINE Int8_t WordS8_rshift(Int8_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordS8_subCheckOverflows(Int8_t,Int8_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU16_addCheckOverflows(Word16_t,Word16_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU16_ge(Word16_t,Word16_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU16_gt(Word16_t,Word16_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU16_le(Word16_t,Word16_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU16_lt(Word16_t,Word16_t);
MLTON_CODEGEN_STATIC_INLINE Word16_t WordU16_mul(Word16_t,Word16_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU16_mulCheckOverflows(Word16_t,Word16_t);
MLTON_CODEGEN_STATIC_INLINE Word16_t WordU16_quot(Word16_t,Word16_t);
MLTON_CODEGEN_STATIC_INLINE Word16_t WordU16_rem(Word16_t,Word16_t);
MLTON_CODEGEN_STATIC_INLINE Word16_t WordU16_rshift(Word16_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU32_addCheckOverflows(Word32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU32_ge(Word32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU32_gt(Word32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU32_le(Word32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU32_lt(Word32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word32_t WordU32_mul(Word32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU32_mulCheckOverflows(Word32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word32_t WordU32_quot(Word32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word32_t WordU32_rem(Word32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Word32_t WordU32_rshift(Word32_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU64_addCheckOverflows(Word64_t,Word64_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU64_ge(Word64_t,Word64_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU64_gt(Word64_t,Word64_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU64_le(Word64_t,Word64_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU64_lt(Word64_t,Word64_t);
MLTON_CODEGEN_STATIC_INLINE Word64_t WordU64_mul(Word64_t,Word64_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU64_mulCheckOverflows(Word64_t,Word64_t);
MLTON_CODEGEN_STATIC_INLINE Word64_t WordU64_quot(Word64_t,Word64_t);
MLTON_CODEGEN_STATIC_INLINE Word64_t WordU64_rem(Word64_t,Word64_t);
MLTON_CODEGEN_STATIC_INLINE Word64_t WordU64_rshift(Word64_t,Word32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU8_addCheckOverflows(Word8_t,Word8_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU8_ge(Word8_t,Word8_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU8_gt(Word8_t,Word8_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t WordU8_le(Word8_t,Word8_t);